--- a/index.html
+++ b/index.html
@@ -6,52 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>calculator</title>
+    <title>Calculator</title>
 </head>
 <body>
- <div class="container">
-    <div class="calculator">
-        <div class="result">
-            <div class="hisory">
-                <p id="history-value"></p>
+    <div class="container">
+        <div class="calculator">
+            <div class="result">
+                <div class="history">
+                    <p id="history-value"></p>
+                </div>
+                <div class="output">
+                    <p id="output-value"></p>
+                </div>
             </div>
-            <div class="output">
-                <p id="output-value"></p>
+            <div class="keyboard">
+                <button class="operator" id="clear">C</button>
+                <button class="operator" id="backspace">CE</button>
+                <button class="operator" id="%">%</button>
+                <button class="operator" id="/">&#247;</button>
+
+                <button class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
+                <button class="operator" id="*">&times;</button>
+
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
+                <button class="operator" id="-">-</button>
+
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
+                <button class="operator" id="+">+</button>
+
+                <button class="empty" id="empty"></button>
+                <button class="number" id="0">0</button>
+                <button class="empty" id="empty"></button>
+                <button class="operator" id="=">=</button>
+                
+
             </div>
-        </div>
-        <div class="keyboard">
-            <!--first raw of buttons-->
-            <button class="operator" id="clear">C</button>
-            <button class="operator" id="backspace">CE</button>
-            <button class="operator" id="%">%</button>
-            <button class="operator" id="/">/</button>
-
-              <!--second raw of buttons-->
-              <button class="operator" id="7">7</button>
-              <button class="operator" id="8">8</button>
-              <button class="operator" id="9">9</button>
-              <button class="operator" id="*">&times;</button>
-
-                <!--third raw of buttons-->
-            <button class="operator" id="4">4</button>
-            <button class="operator" id="5">5</button>
-            <button class="operator" id="6">6</button>
-            <button class="operator" id="-">-</button>
-
-              <!--fourth raw of buttons-->
-              <button class="operator" id="1">1</button>
-              <button class="operator" id="2">2</button>
-              <button class="operator" id="3">3</button>
-              <button class="operator" id="+">+</button>
-
-                <!--first raw of buttons-->
-            <button class="operator" id="empty"></button>
-            <button class="operator" id="0">0</button>
-            <button class="operator" id="empty"></button>
-            <button class="operator" id="=">=</button>
         </div>
     </div>
- </div> 
- <script src="app.js"></script>  
+
+    <script src="app.js"></script>
 </body>
 </html>
